--- a/project.json
+++ b/project.json
@@ -12,7 +12,9 @@
           "type": "platform",
           "version": "1.0.1"
         },
-        "Microsoft.AspNetCore.Server.Kestrel": "1.0.0"
+        "Microsoft.AspNetCore.Server.Kestrel": "1.0.0",
+        "Microsoft.AspNetCore.Mvc": "1.0.0",
+        "Microsoft.AspNetCore.Mvc.Core": "1.0.0"
       },
       "imports": "dnxcore50"
     }
