--- a/project.json
+++ b/project.json
@@ -14,7 +14,8 @@
         },
         "Microsoft.AspNetCore.Server.Kestrel": "1.0.0",
         "Microsoft.AspNetCore.Mvc": "1.0.0",
-        "Microsoft.AspNetCore.Mvc.Core": "1.0.0"
+        "Microsoft.AspNetCore.Mvc.Core": "1.0.0",
+        "Swashbuckle": "6.0.0-beta902"
       },
       "imports": "dnxcore50"
     }
